0.8.0 - currently working on
- [#4080] Fix: Memory-only models must not try to load IRRE relations from database
- [#4056] Feature: Add List::at
- [#4055] Feature: Add a Sortable interface
- [#4030] Feature: Add a function for calculating the distance between two geo objects
- [#4053] Feature: Add Model::setPageUid
- [#2049] Cleanup: Drop our copy of t3lib_div::rmdir
- [#3984] Feature: Add countByWhereClause() and countByPageUid() to the DataMapper
- [#3983] Feature: Add LIMIT to findByPageUid()
- [#3981] Feature: Add LIMIT to findByWhereClause()
- [#3957] Change: tx_oelib_MapperRegistry should use class_exists() with autoload = TRUE instead of calling our own autoloader
- [#3927] Fix: Message in system log: Unable to autoload class "pear"
- [#3921] Fix: Crash in the List testcase in PHP 5.2 after the switch to SplObjectStorage
- [#3870] Change: tx_oelib_List should use an SplObjectStorage
- [#3854] Fix: 1:n IRRE relations need to drop extension prefixes in SQL column names
- [#3812] Feature: Provide a geocoding service
- [#3871] Change: getTemplate should be protected
- [#3860] Fix: grlist for FE user of fake FE should be 0,-1 when no user is logged in
- [#2842] Change: Require TYPO3 4.3 for oelib and seminars
- [#1636] Feature: realMailer::sendEmail should return the return value from t3lib_div::plainMailEncoded
- [#3434] Cleanup: Replace false/true with FALSE/TRUE
- [#3819] Change: Rely on the Core autoloader for TYPO3 >= 4.3
- [#3818] Change: Use the null timetracker for the fake FE if it is available
- [#3773] Feature: Add an interface "Geo"
- [#3280] Feature: Add hooks to ::cleanUp
- [#3791] Feature: When saving an 1:n relation, delete all unconnected records
- [#3790] Feature: Add cascading deletes for 1:n IRRE relations
- [#3736] Fix: DB warnings in the EM
- [#3801] Fix: The FE user mapper must not use the user data from TSFE->fe_user->user
- [#2684] Feature: Implement saving of compositions (1:n relations)